<resources>
    <string name="app_name">Chatster</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_confirm_phone">Confirm Phone</string>
    <string name="title_activity_register_user">Register User</string>
    <string name="title_activity_group_chat"></string>
    <string name="title_activity_create_group_chat">Create Group Chat</string>
    <string name="title_activity_group_chat_info">Group Chat Info</string>
    <string name="title_activity_chatster_settings">Chatster Settings</string>
    <string name="title_activity_edit_user_status">Edit User Status</string>
    <string name="title_activity_add_new_group_members"></string>
    <string name="title_activity_chat"></string>
    <string name="img">Image</string>
    <string name="group_info">Group Chat Info</string>
    <string name="no_internet_connection">No internet connection. Try again later.</string>
    <string name="request_accepted">Has accepted your contact request</string>
    <string name="send_contact_request">Send</string>
    <string name="cancel_contact_request">Cancel</string>
    <string name="group_chat_accepted">Accepted invitation to group %1$s</string>
    <string name="join_group_chat">Would you like to join this group chat?</string>
    <string name="enter_group_chat_name_here">Enter group chat name here …</string>
    <string name="title_activity_settings">Settings</string>
    <string name="new_message">Sent you new message</string>
    <string name="title_activity_splash_screen">Chatster</string>
    <string name="connect_with_people_around_the_world">Connect with people around the world</string>
    <string name="status_message">Status message…</string>
    <string name="register">Register</string>
    <string name="enter_username">Username must be unique…</string>
    <string name="success_register">Successfully registered.</string>
    <string name="fail_register">Registration failed. Try again later.</string>
    <string name="image_msg">Sent you an image</string>
    <string name="next">Next</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="terms_amp_policies"><u>Terms &amp; Policies</u></string>
    <string name="copyright_2017_mwsoft_privacy_policy">Copyright 2017–2018 MWSOFT <u>Privacy Policy</u></string>
    <string name="please_enter_your_phone_number">Please enter your phone number and click Send Code.</string>
    <string name="we_will_send_you_sms_with_registration_code">We will send you SMS with verification code.</string>
    <string name="incorrect_phone">The phone number you have entered is incorrect. Please try again.</string>
    <string name="smth_went_wrong">Sorry, something went wrong. Please try again later.</string>
    <string name="update">Update</string>
    <string name="enter_your_phone">Please enter your phone number</string>
    <string name="user_profile_updated">User profile updated.</string>
    <string name="exit">EXIT</string>
    <string name="group_admin_is">Group admin is %1$s</string>
    <string name="chatster">Chatster</string>
    <string name="account_already_exists">We are glad to see you back! Enjoy chatting.</string>
    <string name="username_already_exists">Ussername already exists, please choose another username.</string>
    <string name="group_updated">Group profile updated.</string>
    <string name="empty_username">User name cannot be empty.</string>
    <string name="user_name">User Name</string>
    <string name="offline">Offline</string>
    <string name="delete_message">Are you sure you want to delete the message?</string>
    <string name="delete_chat">Are you sure you want to delete the chat?</string>
    <string name="delete_group_chat">Are you sure you want to delete the group chat?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_member">Add New Member</string>
    <string name="create_group_no_members">To create group chat you need to add at least one contact to the group.</string>
    <string name="create_group_no_name">To create group chat you need to give name to the group.</string>
    <string name="do_you_want_delete_msg">Are you sure you want to delete the message?</string>
    <string name="left_group">Left group.</string>
    <string name="joined_the_group"> joined the group.</string>
    <string name="path_to_awesome_font"></string>
    <string name="number_unread_messages">%1$d</string>
    <string name="random_int">%1$d</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="reply">Reply</string>
    <string name="by_clicking_on_next_button_you_agree_to_our">By clicking on \'Next\' button you agree to our</string>
    <string name="at_least_16_years_old_desc">To use Chatster you must be at least 16 years old.</string>
    <string name="at_least_16_years_old_q"> Are you at least 16 years old? </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permissions_warning">After you click on the Next button, you will be asked to grant four different permissions to Chatster app. These permissions are needed in order for Chatster to function properly. If you want to know more about why Chatster needs these permissions, please send us an email at admin@mwsoft.nl. Thank you for your understanding.</string>
    <string name="chatster_logo">Chatster Logo</string>
    <string name="title_posts">Posts</string>
    <string name="title_create">Create</string>
    <string name="title_my_profile">Profile</string>
    <string name="gallery_picture">Gallery Picture</string>
    <string name="camera_picture">Camera Picture</string>
    <string name="back">Back</string>
    <string name="create">Create</string>
    <string name="post_caption">Post Caption</string>
    <string name="post_caption_hint">Write a caption for your post. Maximum length 500 characters.</string>
    <string name="upload">Upload</string>
    <string name="image">Image</string>
    <string name="add_caption_next">Add Caption Next</string>
    <string name="post_edit_image">Post Edit Image</string>
    <string name="discover">Discover</string>
    <string name="history">History</string>
    <string name="gallery_video">Gallery Video</string>
    <string name="video_capture">Video Capture</string>
    <string name="write_text">Write Text</string>
    <string name="invite_desc">Invite your friend to join Chatster and have fun!</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="spy_chat">Spy Chat</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="not_registered_ask">If you would like to connect with %1$s, invite %2$s to join Chatster. You can do so by clicking on the Invite button.</string>
    <string name="not_registered_explain">We are very sorry, but you cannot send end-to-end encrypted messages to %1$s, because %2$s is not registered with Chatster.</string>
</resources>